parser/y.output

state 0
	$accept: .chunk $end 
	chunk1: .    (4)

	.  reduce 4 (src line 88)

	chunk  goto 1
	chunk1  goto 2

state 1
	$accept:  chunk.$end 

	$end  accept
	.  error


state 2
	chunk:  chunk1.    (1)
	chunk:  chunk1.laststat 
	chunk:  chunk1.laststat ';' 
	chunk1:  chunk1.stat 
	chunk1:  chunk1.';' 

	TBreak  shift 7
	TContinue  shift 8
	TDo  shift 11
	TFunction  shift 15
	TIf  shift 14
	TLocal  shift 16
	TReturn  shift 6
	TRepeat  shift 13
	TWhile  shift 12
	TIdent  shift 21
	'('  shift 20
	';'  shift 5
	.  reduce 1 (src line 68)

	stat  goto 4
	laststat  goto 3
	varlist  goto 9
	var  goto 17
	prefixexp  goto 10
	functioncall  goto 19
	afunctioncall  goto 18

state 3
	chunk:  chunk1 laststat.    (2)
	chunk:  chunk1 laststat.';' 

	';'  shift 22
	.  reduce 2 (src line 74)


state 4
	chunk1:  chunk1 stat.    (5)

	.  reduce 5 (src line 91)


state 5
	chunk1:  chunk1 ';'.    (6)

	.  reduce 6 (src line 94)


state 6
	laststat:  TReturn.    (21)
	laststat:  TReturn.exprlist 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  reduce 21 (src line 182)

	var  goto 35
	exprlist  goto 23
	expr  goto 24
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 7
	laststat:  TBreak.    (23)

	.  reduce 23 (src line 190)


state 8
	laststat:  TContinue.    (24)

	.  reduce 24 (src line 194)


state 9
	stat:  varlist.'=' exprlist 
	varlist:  varlist.',' var 

	'='  shift 37
	','  shift 38
	.  error


10: shift/reduce conflict (shift 43(0), red'n 9(0)) on '('
state 10
	stat:  prefixexp.    (9)
	var:  prefixexp.'[' expr ']' 
	var:  prefixexp.'.' TIdent 
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.':' TIdent args 

	TString  shift 36
	'{'  shift 46
	'('  shift 43
	':'  shift 42
	'.'  shift 40
	'['  shift 39
	.  reduce 9 (src line 108)

	string  goto 45
	args  goto 41
	tableconstructor  goto 44

state 11
	stat:  TDo.block TEnd 
	chunk1: .    (4)

	.  reduce 4 (src line 88)

	chunk  goto 48
	chunk1  goto 2
	block  goto 47

state 12
	stat:  TWhile.expr TDo block TEnd 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 49
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 13
	stat:  TRepeat.block TUntil expr 
	chunk1: .    (4)

	.  reduce 4 (src line 88)

	chunk  goto 48
	chunk1  goto 2
	block  goto 50

state 14
	stat:  TIf.expr TThen block elseifs TEnd 
	stat:  TIf.expr TThen block elseifs TElse block TEnd 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 51
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 15
	stat:  TFunction.funcname funcbody 

	TIdent  shift 54
	.  error

	funcname  goto 52
	funcname1  goto 53

state 16
	stat:  TLocal.TFunction TIdent funcbody 
	stat:  TLocal.namelist '=' exprlist 
	stat:  TLocal.namelist 

	TFunction  shift 55
	TIdent  shift 57
	.  error

	namelist  goto 56

state 17
	varlist:  var.    (29)
	prefixexp:  var.    (63)

	'='  reduce 29 (src line 221)
	','  reduce 29 (src line 221)
	.  reduce 63 (src line 362)


state 18
	prefixexp:  afunctioncall.    (64)

	.  reduce 64 (src line 365)


state 19
	prefixexp:  functioncall.    (65)

	.  reduce 65 (src line 368)


state 20
	prefixexp:  '('.expr ')' 
	afunctioncall:  '('.functioncall ')' 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 58
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 59
	afunctioncall  goto 18
	function  goto 29

state 21
	var:  TIdent.    (31)

	.  reduce 31 (src line 229)


state 22
	chunk:  chunk1 laststat ';'.    (3)

	.  reduce 3 (src line 80)


state 23
	laststat:  TReturn exprlist.    (22)
	exprlist:  exprlist.',' expr 

	','  shift 60
	.  reduce 22 (src line 186)


state 24
	exprlist:  expr.    (36)
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 

	TAnd  shift 62
	TOr  shift 61
	TEqeq  shift 67
	TNeq  shift 68
	TLte  shift 66
	TGte  shift 65
	T2Comma  shift 69
	'>'  shift 63
	'<'  shift 64
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	'^'  shift 75
	.  reduce 36 (src line 253)


state 25
	expr:  TNil.    (38)

	.  reduce 38 (src line 261)


state 26
	expr:  TFalse.    (39)

	.  reduce 39 (src line 265)


state 27
	expr:  TTrue.    (40)

	.  reduce 40 (src line 269)


state 28
	expr:  TNumber.    (41)

	.  reduce 41 (src line 273)


state 29
	expr:  function.    (42)

	.  reduce 42 (src line 277)


30: shift/reduce conflict (shift 43(0), red'n 43(0)) on '('
state 30
	var:  prefixexp.'[' expr ']' 
	var:  prefixexp.'.' TIdent 
	expr:  prefixexp.    (43)
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.':' TIdent args 

	TString  shift 36
	'{'  shift 46
	'('  shift 43
	':'  shift 42
	'.'  shift 40
	'['  shift 39
	.  reduce 43 (src line 280)

	string  goto 45
	args  goto 41
	tableconstructor  goto 44

state 31
	expr:  string.    (44)

	.  reduce 44 (src line 283)


state 32
	expr:  '-'.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 76
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 33
	expr:  TNot.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 77
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 34
	function:  TFunction.funcbody 

	'('  shift 79
	.  error

	funcbody  goto 78

state 35
	prefixexp:  var.    (63)

	.  reduce 63 (src line 362)


state 36
	string:  TString.    (62)

	.  reduce 62 (src line 356)


state 37
	stat:  varlist '='.exprlist 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	exprlist  goto 80
	expr  goto 24
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 38
	varlist:  varlist ','.var 

	TIdent  shift 21
	'('  shift 20
	.  error

	var  goto 81
	prefixexp  goto 82
	functioncall  goto 19
	afunctioncall  goto 18

state 39
	var:  prefixexp '['.expr ']' 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 83
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 40
	var:  prefixexp '.'.TIdent 

	TIdent  shift 84
	.  error


state 41
	functioncall:  prefixexp args.    (68)

	.  reduce 68 (src line 383)


state 42
	functioncall:  prefixexp ':'.TIdent args 

	TIdent  shift 85
	.  error


state 43
	args:  '('.')' 
	args:  '('.exprlist ')' 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	')'  shift 86
	.  error

	var  goto 35
	exprlist  goto 87
	expr  goto 24
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 44
	args:  tableconstructor.    (72)

	.  reduce 72 (src line 405)


state 45
	args:  string.    (73)

	.  reduce 73 (src line 408)


state 46
	tableconstructor:  '{'.'}' 
	tableconstructor:  '{'.fieldlist '}' 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 91
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	'['  shift 92
	'}'  shift 88
	.  error

	var  goto 35
	expr  goto 93
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29
	fieldlist  goto 89
	field  goto 90

state 47
	stat:  TDo block.TEnd 

	TEnd  shift 94
	.  error


state 48
	block:  chunk.    (7)

	.  reduce 7 (src line 99)


state 49
	stat:  TWhile expr.TDo block TEnd 
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 

	TAnd  shift 62
	TDo  shift 95
	TOr  shift 61
	TEqeq  shift 67
	TNeq  shift 68
	TLte  shift 66
	TGte  shift 65
	T2Comma  shift 69
	'>'  shift 63
	'<'  shift 64
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	'^'  shift 75
	.  error


state 50
	stat:  TRepeat block.TUntil expr 

	TUntil  shift 96
	.  error


state 51
	stat:  TIf expr.TThen block elseifs TEnd 
	stat:  TIf expr.TThen block elseifs TElse block TEnd 
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 

	TAnd  shift 62
	TOr  shift 61
	TThen  shift 97
	TEqeq  shift 67
	TNeq  shift 68
	TLte  shift 66
	TGte  shift 65
	T2Comma  shift 69
	'>'  shift 63
	'<'  shift 64
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	'^'  shift 75
	.  error


state 52
	stat:  TFunction funcname.funcbody 

	'('  shift 79
	.  error

	funcbody  goto 98

state 53
	funcname:  funcname1.    (25)
	funcname:  funcname1.':' TIdent 
	funcname1:  funcname1.'.' TIdent 

	':'  shift 99
	'.'  shift 100
	.  reduce 25 (src line 200)


state 54
	funcname1:  TIdent.    (27)

	.  reduce 27 (src line 208)


state 55
	stat:  TLocal TFunction.TIdent funcbody 

	TIdent  shift 101
	.  error


state 56
	stat:  TLocal namelist.'=' exprlist 
	stat:  TLocal namelist.    (18)
	namelist:  namelist.',' TIdent 

	'='  shift 102
	','  shift 103
	.  reduce 18 (src line 167)


state 57
	namelist:  TIdent.    (34)

	.  reduce 34 (src line 245)


state 58
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 
	prefixexp:  '(' expr.')' 

	TAnd  shift 62
	TOr  shift 61
	TEqeq  shift 67
	TNeq  shift 68
	TLte  shift 66
	TGte  shift 65
	T2Comma  shift 69
	'>'  shift 63
	'<'  shift 64
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	'^'  shift 75
	')'  shift 104
	.  error


59: shift/reduce conflict (shift 105(0), red'n 65(0)) on ')'
state 59
	prefixexp:  functioncall.    (65)
	afunctioncall:  '(' functioncall.')' 

	')'  shift 105
	.  reduce 65 (src line 368)


state 60
	exprlist:  exprlist ','.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 106
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 61
	expr:  expr TOr.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 107
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 62
	expr:  expr TAnd.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 108
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 63
	expr:  expr '>'.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 109
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 64
	expr:  expr '<'.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 110
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 65
	expr:  expr TGte.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 111
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 66
	expr:  expr TLte.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 112
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 67
	expr:  expr TEqeq.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 113
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 68
	expr:  expr TNeq.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 114
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 69
	expr:  expr T2Comma.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 115
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 70
	expr:  expr '+'.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 116
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 71
	expr:  expr '-'.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 117
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 72
	expr:  expr '*'.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 118
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 73
	expr:  expr '/'.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 119
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 74
	expr:  expr '%'.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 120
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 75
	expr:  expr '^'.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 121
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 76
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 
	expr:  '-' expr.    (60)

	'^'  shift 75
	.  reduce 60 (src line 346)


state 77
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 
	expr:  TNot expr.    (61)

	'^'  shift 75
	.  reduce 61 (src line 350)


state 78
	function:  TFunction funcbody.    (74)

	.  reduce 74 (src line 413)


state 79
	funcbody:  '('.parlist ')' block TEnd 
	funcbody:  '('.')' block TEnd 

	TIdent  shift 57
	')'  shift 123
	.  error

	namelist  goto 124
	parlist  goto 122

state 80
	stat:  varlist '=' exprlist.    (8)
	exprlist:  exprlist.',' expr 

	','  shift 60
	.  reduce 8 (src line 104)


state 81
	varlist:  varlist ',' var.    (30)
	prefixexp:  var.    (63)

	'='  reduce 30 (src line 224)
	','  reduce 30 (src line 224)
	.  reduce 63 (src line 362)


state 82
	var:  prefixexp.'[' expr ']' 
	var:  prefixexp.'.' TIdent 
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.':' TIdent args 

	TString  shift 36
	'{'  shift 46
	'('  shift 43
	':'  shift 42
	'.'  shift 40
	'['  shift 39
	.  error

	string  goto 45
	args  goto 41
	tableconstructor  goto 44

state 83
	var:  prefixexp '[' expr.']' 
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 

	TAnd  shift 62
	TOr  shift 61
	TEqeq  shift 67
	TNeq  shift 68
	TLte  shift 66
	TGte  shift 65
	T2Comma  shift 69
	'>'  shift 63
	'<'  shift 64
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	'^'  shift 75
	']'  shift 125
	.  error


state 84
	var:  prefixexp '.' TIdent.    (33)

	.  reduce 33 (src line 237)


state 85
	functioncall:  prefixexp ':' TIdent.args 

	TString  shift 36
	'{'  shift 46
	'('  shift 43
	.  error

	string  goto 45
	args  goto 126
	tableconstructor  goto 44

state 86
	args:  '(' ')'.    (70)

	.  reduce 70 (src line 393)


state 87
	exprlist:  exprlist.',' expr 
	args:  '(' exprlist.')' 

	','  shift 60
	')'  shift 127
	.  error


state 88
	tableconstructor:  '{' '}'.    (78)

	.  reduce 78 (src line 438)


state 89
	tableconstructor:  '{' fieldlist.'}' 
	fieldlist:  fieldlist.fieldsep field 
	fieldlist:  fieldlist.fieldsep 

	';'  shift 131
	','  shift 130
	'}'  shift 128
	.  error

	fieldsep  goto 129

state 90
	fieldlist:  field.    (80)

	.  reduce 80 (src line 449)


state 91
	var:  TIdent.    (31)
	field:  TIdent.'=' expr 

	'='  shift 132
	.  reduce 31 (src line 229)


state 92
	field:  '['.expr ']' '=' expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 133
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 93
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 
	field:  expr.    (85)

	TAnd  shift 62
	TOr  shift 61
	TEqeq  shift 67
	TNeq  shift 68
	TLte  shift 66
	TGte  shift 65
	T2Comma  shift 69
	'>'  shift 63
	'<'  shift 64
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	'^'  shift 75
	.  reduce 85 (src line 467)


state 94
	stat:  TDo block TEnd.    (10)

	.  reduce 10 (src line 117)


state 95
	stat:  TWhile expr TDo.block TEnd 
	chunk1: .    (4)

	.  reduce 4 (src line 88)

	chunk  goto 48
	chunk1  goto 2
	block  goto 134

state 96
	stat:  TRepeat block TUntil.expr 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	expr  goto 135
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 97
	stat:  TIf expr TThen.block elseifs TEnd 
	stat:  TIf expr TThen.block elseifs TElse block TEnd 
	chunk1: .    (4)

	.  reduce 4 (src line 88)

	chunk  goto 48
	chunk1  goto 2
	block  goto 136

state 98
	stat:  TFunction funcname funcbody.    (15)

	.  reduce 15 (src line 153)


state 99
	funcname:  funcname1 ':'.TIdent 

	TIdent  shift 137
	.  error


state 100
	funcname1:  funcname1 '.'.TIdent 

	TIdent  shift 138
	.  error


state 101
	stat:  TLocal TFunction TIdent.funcbody 

	'('  shift 79
	.  error

	funcbody  goto 139

state 102
	stat:  TLocal namelist '='.exprlist 

	TFalse  shift 26
	TFunction  shift 34
	TNil  shift 25
	TNot  shift 33
	TTrue  shift 27
	TIdent  shift 21
	TNumber  shift 28
	TString  shift 36
	'('  shift 20
	'-'  shift 32
	.  error

	var  goto 35
	exprlist  goto 140
	expr  goto 24
	string  goto 31
	prefixexp  goto 30
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 29

state 103
	namelist:  namelist ','.TIdent 

	TIdent  shift 141
	.  error


state 104
	prefixexp:  '(' expr ')'.    (66)

	.  reduce 66 (src line 371)


state 105
	afunctioncall:  '(' functioncall ')'.    (67)

	.  reduce 67 (src line 377)


state 106
	exprlist:  exprlist ',' expr.    (37)
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 

	TAnd  shift 62
	TOr  shift 61
	TEqeq  shift 67
	TNeq  shift 68
	TLte  shift 66
	TGte  shift 65
	T2Comma  shift 69
	'>'  shift 63
	'<'  shift 64
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	'^'  shift 75
	.  reduce 37 (src line 256)


state 107
	expr:  expr.TOr expr 
	expr:  expr TOr expr.    (45)
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 

	TAnd  shift 62
	TEqeq  shift 67
	TNeq  shift 68
	TLte  shift 66
	TGte  shift 65
	T2Comma  shift 69
	'>'  shift 63
	'<'  shift 64
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	'^'  shift 75
	.  reduce 45 (src line 286)

